local teammate-branch -> origin teammate-branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    local main -> origin main
+    <p>local main -> origin main</p>
+    <p>local teammate-branch -> origin teammate-branch</p>
   </body>
 </html>
