--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    local main -> origin main
+    <p>local main -> origin main</p>
+    <p>local my-branch -> origin my-branch</p>
   </body>
 </html>
