--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       local my-copy-branch -> origin my-copy-branch base it on teammate-branch
     </p>
     <p>local my-branch -> origin my-branch</p>
+
+    <div>
+      <h2>My Branch</h2>
+      <p>This is my branch content.</p>
+      <p>this is for git stash</p>
+    </div>
   </body>
 </html>
