--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h2>My Branch</h2>
       <p>This is my branch content.</p>
       <p>this is for git stash</p>
+      <h2>my-copy-branch</h2>
     </div>
   </body>
 </html>
